//
// Created by Ahmed Mustafa on 3/5/2025.
//

#ifndef STATION_TYPE_H
#define STATION_TYPE_H

namespace SPI {

    enum class STATION_TYPE {
        ROOT = 0,
        MCQ = 1,
        LEAF = 255
    };

}

#endif //STATION_TYPE_H
